correction bug d'ajout après la mort et ajout d'autre action pour lycanthrope dans les tours